# ROS2_Udemy

Template/: OOP_Python_Code_Template_for_Nodes.py
install/: local_setup.sh  setup.bash  setup.sh
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
log/: latest_build
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/install/: local_setup.sh  setup.sh  setup.zsh
my_cpp_pkg/install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client_no_oop  add_two_ints_server  cpp_node  robot_news_station  smartphone
my_cpp_pkg/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh  package.xml
my_cpp_pkg/log/: latest_build
my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_client_no_oop_sol.cpp  add_two_ints_server.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
my_cpp_pkg/src/install/: local_setup.sh  setup.ps1  setup.sh
my_cpp_pkg/src/log/: latest_build
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  my_first_node.py  number_counter.py  number_counter_Activity003.py  number_publisher.py  robot_news_station.py  smartphone.py
my_py_pkg/my_py_pkg/install/: local_setup.sh  setup.sh
my_py_pkg/my_py_pkg/log/: latest_build
